// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given linkOpenNewTab configurations expect cta button to render correctly 1`] = `
<a
  class="cta-button Primary   group"
  data-testid="cta-button"
  href="https://www.google.com/"
  target="_blank"
>
  <div
    class="flex justify-center items-center space-x-[1.25rem]"
  >
    <span>
      Click Link
    </span>
    <div>
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"
          />
        </g>
      </svg>
    </div>
  </div>
</a>
`;

exports[`Given linkOpenNewTab configurations expect cta button to render correctly 2`] = `
<a
  class="cta-button Primary   group"
  data-testid="cta-button"
  href="https://www.google.com/"
  target="_self"
>
  <div
    class="flex justify-center items-center space-x-[1.25rem]"
  >
    <span>
      Click Link
    </span>
    <div>
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"
          />
        </g>
      </svg>
    </div>
  </div>
</a>
`;
